thesis: Misc improvements

--- a/thesis/sections/introduction.tex
+++ b/thesis/sections/introduction.tex
@@ -9,7 +9,7 @@ This thesis is in the realm of formal verification, i.e. the attempt to verify a
 With these tools, formal verification engineers strive to prove the correctness of systems such as general computer programs, \glspl{os}, compilers or hardware designs.
 For a system to be correct means that it complies with a specification.
 Formal verification of a system is the attempt to prove that it is free of errors, i.e. meets all properties imposed by some specification.
-\enquote{Specification} here might reference to documents specifying standards of the industry, but it might also refer to more abstract properties like the absence of memory leaks or race conditions in parallel programming.
+\enquote{Specification} here might refer to documents specifying standards of the industry, but it might also refer to more abstract properties like the absence of memory leaks or race conditions in parallel programming.
 Thus, formal verification complements testing.
 The relation between these two approaches often is illustrated by a famous quote of Edsger Dijkstra:
 
@@ -19,7 +19,7 @@ The relation between these two approaches often is illustrated by a famous quote
 
 Whereas testing is a quick and efficient way of finding bugs in the development process of a system, formal verification is a more complex but complete (regarding the properties verified) process of proving the absence of bugs.
 
-In \citetitle{Reid17} \cite{Reid17}, \citeauthor{Reid17} stressed the need of verifying specifications themselves as opposed to simply verifying implementations against specifications.
+In \citetitle{Reid17} \cite{Reid17}, \citeauthor{Reid17} stressed the need for verifying specifications themselves as opposed to simply verifying implementations against specifications.
 To tackle this, he proposed to check specifications against higher-level properties and used this methodology to verify the specification of the ARM M-Class architecture.
 
 The following analogy by \citeauthor{Reid17} gives an intuition for this line of research: think of a specification as the law and of an implementation as some action that is touched by the law.
