--- a/thesis/sections/discussion.tex
+++ b/thesis/sections/discussion.tex
@@ -34,7 +34,7 @@ Whereas the topics of the scope and trustworthiness of our work touch more gener
 \label{sec:discuss-arch}
 
 MINRV8 is meant to be a reasonable abstraction of a real-world RISC-V architecture from a security standpoint.
-However, up to this point nothing has been said about the limits of this abstraction.
+However, up to this point, nothing has been said about the limits of this abstraction.
 In this section, we will reflect on the limits of the MINRV8 architecture and its implementation.
 
 In summary, the MINRV8 architecture knows three groups of instructions (cf. table \ref{tbl:min-arch-instrs}):
@@ -44,16 +44,16 @@ In summary, the MINRV8 architecture knows three groups of instructions (cf. tabl
     \item System instructions \minrv{Ecall}, \minrv{Mret}, \minrv{Csrrs}, and \minrv{Csrrc}
 \end{itemize}
 
-A reader, experienced in the field of microcontrollers or computer-architecture in general might wonder why our model does not include:
+A reader, experienced in the field of microcontrollers or computer-architecture in general, might wonder why our model does not include:
 \begin{enumerate}
     \item Executable memory and a \gls{pc}
     \item Jump or branch instructions
 \end{enumerate}
 
 The reason for both of these points lies in the implementation of the model.
-In the introduction of the MINRV8 architecture in section \ref{sec:minrv8} we mentioned that the idea of the architecture was tightly coupled to its implementation in nuXmv.
+In the introduction of the MINRV8 architecture in section \ref{sec:minrv8}, we mentioned that the idea of the architecture was tightly coupled to its implementation in nuXmv.
 The design of the model had to answer the question: How can a stream of instructions be implemented?
-nuXmv allows to think of the following options:
+nuXmv allows thinking of the following options:
 \begin{enumerate}
     \item \label{itm:exmem-frozen}
     Use \smv{FROZENVAR}s to model executable memory - a \smv{FROZENVAR} (frozen variable) is something like a constant in other programming languages but without a fixed value.
@@ -61,10 +61,10 @@ nuXmv allows to think of the following options:
     This is more efficient than using a plain \smv{VAR} and constraining it to not change, e.g. \smv{TRANS next(x) = x;}.
     \item \label{itm:exmem-var}
     Use \smv{VAR}s to model executable memory.
-    In practice, this would mean that for memory to hold all instructions executed it would need to be much larger than the current 4 bytes.
+    In practice, this would mean that for memory to hold all instructions executed, it would need to be much larger than the current 4 bytes.
     \item \label{itm:exmem-ivar}
     Finally, use \smv{IVAR}s to model the stream of instruction.
-    This is the option we decided to go for as described in section \ref{sec:model-implementation}.
+    This is the option we decided to go for, as described in section \ref{sec:model-implementation}.
     Using input variables means that there is no model of executable memory.
     Instead, the input variables provided to the implementation model a stream of a fully decoded instruction on each transition of the simulated model.
     As such, the architecture does not need to worry \textit{where} these instructions come from.
@@ -73,7 +73,7 @@ nuXmv allows to think of the following options:
 The decision towards using input variables as a model of the stream of instructions was made because of two reasons:
 \begin{enumerate*}[label=\alph*)]
     \item in the prototyping phase of the model, it was quickly found that using input variables led to significant performance improvements, and
-    \item using input variable simplified the implementation notably.
+    \item using input variables simplified the implementation notably.
 \end{enumerate*}
 Having used purely either frozen variables or variables would have increased the size of the state space to be traversed by nuXmv and would have introduced the necessity to implement instruction decoding increasing the complexity of the transition relation.
 Furthermore, it would not have allowed for unbounded model checking of the architecture since the size of programs to be taken into consideration would have been bounded by the size of executable memory.
@@ -100,7 +100,7 @@ Since we decided to use input variables over a model of the \gls{mtvec} register
 
 The use of input variables over (frozen) variables introduces a sense of non-determinism to the model of the MINRV8 architecture when it comes to handling interrupts and exceptions which is illustrated by the following example:
 Consider some memory layout for the RISC-V architecture as depicted in figure \ref{fig:interrupt-flow} where code is executed from left to right starting with an \minrv{Ecall} instruction.
-Executing this instruction triggers a shift in control to machine-mode which jumps to address \minrv{X} pointed to by the \gls{mtvec} register.
+Executing this instruction triggers a shift in control to machine-mode, which jumps to address \minrv{X} pointed to by the \gls{mtvec} register.
 Then, the instructions at addresses \minrv{X} to \minrv{Z} and subsequent ones are executed until finally, a \minrv{Mret} instruction is read an executed which triggers a jump to address \minrv{A}.
 Two instructions later, another \minrv{Ecall} instruction is executed, etc.
 We would expect the order of instructions to be executed to look something like:
@@ -127,7 +127,7 @@ One would expect to find the same code after an \minrv{Ecall} instruction being 
 }.
 However, there also exists a sequence of input variable valuations that exactly matches a real stream of instructions where the instructions executed after an environment call coincide.
 
-This illustrates one example for why the implementation of the MINRV8 \textit{abstracts} from real architectures.
+This illustrates one example of why the implementation of the MINRV8 \textit{abstracts} from real architectures.
 In regard to program flow on traps, it can be expected that the model accurately comprises all expected streams of instructions but also includes many more one would naturally consider to be unrealistic.
 
 The second concept, the abstract implementation of the MINRV8 architecture is missing are jump and branch instructions.
@@ -152,8 +152,8 @@ This linearized counterpart is considered by nuXmv and the sequence of states ge
 \paragraph{Summary}
 
 Starting with the premise of this thesis, it was always clear that the MINRV8 architecture is a simplification.
-This is not a problem since by focusing on the core, security related instructions allowed to implement a tractable and small model in nuXmv.
-If one would add jump and branch instructions to the MINRV8 architecture, it would be fully comparable to actual RISC-V architectures.
+This is not a problem since by focusing on the core, security-related instructions allowed to implement a tractable and small model in nuXmv.
+If one added jump and branch instructions to the MINRV8 architecture, it would be fully comparable to actual RISC-V architectures.
 From this point of view, it is not a problem to apply the results of the verification process, i.e. the set of assumptions, to the RISC-V architecture.
 
 The implementation of the MINRV8 architecture abstracted from real-world architectures in two main points:
@@ -179,9 +179,9 @@ In this section, we will investigate whether the assumptions that ultimately est
 
 Regarding point \ref{itm:assumptions-non-trivial}, it must be checked that neither are the assumptions contradictory nor do they trivially entail the information flow properties.
 Recall that we were able to prove that \enquote{$ \text{assumptions} \Leftrightarrow \text{properties} $}.
-In this case, the assumptions could only be contradictory if the properties are contradictory as well which they are obviously not as there are valid counter-examples to the properties when no assumptions are given.
-On the other hand, recall that in section \ref{sec:canaries} we were able to make changes to the architecture such that \enquote{$ \neg(\text{assumptions} \Rightarrow \text{properties}) $} holds.
-This indicates that the assumption actually express something meaningful and do not trivially entail the information flow properties.
+In this case, the assumptions could only be contradictory if the properties are contradictory as well, which they are obviously not as there are valid counter-examples to the properties when no assumptions are given.
+On the other hand, recall that in section \ref{sec:canaries}, we were able to make changes to the architecture such that \enquote{$ \neg(\text{assumptions} \Rightarrow \text{properties}) $} holds.
+This indicates that the assumptions actually express something meaningful and do not trivially entail the information flow properties.
 
 Point \ref{itm:assumptions-machine-mode} also is met by the assumptions introduced in section \ref{sec:assumptions}.
 Whenever it is stated that certain instructions must not be executed under certain circumstances, these formulas are guarded by the antecedent \smv{priv ->}.
@@ -228,7 +228,7 @@ If the antecedent of this assumption would have been replaced by: \enquote{Whene
     A similar issue was discussed by \citeauthor{Reid17} when he elaborates how the properties he verified the ARM architecture against were phrased (cf. \cite[p.88:4]{Reid17}).
 }.
 Such a trap is critical for the SYSRET vulnerability as it interrupts machine-mode from properly returning to user-mode while already having set the stack-pointer back to user-mode.
-The consequent also applying to traps from machine- to machine-mode in context of the MINRV8 architecture leads to machine-mode ensuring that the proper stack-pointer is setup correctly on \textit{all} traps rendering the SYSRET vulnerability impossible.
+The consequent also applying to traps from machine- to machine-mode in context of the MINRV8 architecture leads to machine-mode ensuring that the proper stack-pointer is set up correctly on \textit{all} traps rendering the SYSRET vulnerability impossible.
 For example, the \glspl{os} being affected by the SYSRET vulnerability clearly did not set the stack-pointer on \textit{all} execution paths of the trap handler for the general protection fault.
 
 The condition \smv{(op = MRET & MPP = 0b_0)} on the right-hand side of the \smv{U}-expression in line \ref{ln:sp-call-mret} equals telling machine-mode: \enquote{You can forget about not using the \minrv{Push} and \minrv{Pop} instructions after you have \textit{attempted} to return control to user-mode}.
@@ -236,7 +236,7 @@ For the same reasons as stated above, this part is critical.
 Leaving this expression out would equal machine-mode having state persistent over user-mode-calls and -returns to and from machine-mode, by which machine-mode memorizes whether it has set the stack-pointer to user-mode or to machine-mode.
 With such a mechanism in place, machine-mode could not be fooled into using the user-mode stack-pointer on any trap handler since it would first check this state.
 
-These two examples stress that the precise phrasing of the assumptions is critical for both how realistic the assumptions are and how well they might be suited to serve as target for verification of actual code-bases.
+These two examples stress that the precise phrasing of the assumptions is critical for both how realistic the assumptions are and how well they might be suited to serve as a target for verification of actual code-bases.
 While it would be sufficient to find a stronger precondition for these assumptions in existing code-bases, it is non-trivial whether such preconditions are easy to find or whether the assumptions might be rephrased such that they still grant the absence of information flow related bugs but are easier to verify in programs.
 Thoroughly investigating how to phrase properties, however, would be out of the scope of this thesis and, as such, marks future work.
 
@@ -253,18 +253,18 @@ But what does \textit{trustworthy} mean?
 Here, we will skip the aspect of technical soundness of this thesis, i.e. the question of whether the work presented in this thesis is without errors.
 In consequence, the degree of trustworthiness of this thesis is determined by whether the results of the verification process actually enhance the confidence in the correctness of the MINRV8 architecture, i.e. rather than asking whether what we did was correct, we ask: did we do the \textit{right} thing?
 
-A possible issue with verification is to make circular arguments (an example for this will be given in chapter \ref{chp:related-work}).
+A possible issue with verification is to make circular arguments (an example of this will be given in chapter \ref{chp:related-work}).
 Verification engineers do not start their work out of nowhere.
 They usually have a feel for what they attempt to verify and have some vulnerabilities in mind they try to tackle.
-If the actual work of modeling a prototype and implementing a verification procedure is influenced by this too strongly, one might object:
+If the actual work of modelling a prototype and implementing a verification procedure is influenced by this too strongly, one might object:
 \enquote{You were able to find vulnerability \textit{X} only because you knew that it was there. Your procedure is nothing but an abstracted simulation of known issues.}
 
 This leads to another concern:
-When aiming to verify systems against certain bugs these are usually generalized to classes of related vulnerabilities.
+When aiming to verify systems against certain bugs, these are usually generalized to classes of related vulnerabilities.
 But with such an approach, one can never be sure that there is no other class of vulnerabilities that was missed.
 In other words: Does the verification procedure have blind spots?
 
-It will now be investigated whether this work is touched by aforementioned two issues.
+It will now be investigated whether this work is touched by the aforementioned two issues.
 
 First, we will investigate whether a circular argument has been made in this thesis.
 Recall the steps that have been taken to verify the MINRV8 architecture against the information flow properties:
@@ -281,19 +281,19 @@ Recall the steps that have been taken to verify the MINRV8 architecture against 
     Test the model by subjecting it to vulnerabilities
 \end{enumerate}
 
-We find that steps \ref{itm:step-semantics} to \ref{itm:step-loop} are well founded by both theory and intuition and do obviously not face the risk of making a circular argument.
+We find that steps \ref{itm:step-semantics} to \ref{itm:step-loop} are well-founded by both theory and intuition and do obviously not face the risk of making a circular argument.
 This, however, is less obvious for steps \ref{itm:step-minrv} and \ref{itm:step-canaries}.
-In both cases, the selection of RISC-V features and instruction to include or vulnerabilities to test respectively can be doubted.
+In both cases, the selection of RISC-V features and instruction to include or vulnerabilities to test, respectively, can be doubted.
 
 The work on this thesis was indeed influenced by the canaries the model was ultimately tested against, e.g. it was decided to implement a cache to be able to cover the cache poisoning attack, and vice versa: the selection of vulnerabilities to test the model against was based on the features implemented in it.
 Despite the circular character of these two steps, we find that this is not an issue.
 Steps \ref{itm:step-minrv} and \ref{itm:step-canaries} must be understood as a prototype of a verification procedure proposed in this thesis which is given by steps \ref{itm:step-semantics} to \ref{itm:step-loop}.
 Having the setup to test these steps being derived via a methodology that is circular to some degree does not make the procedure itself circular.
 The opposite is the case:
-We find that the definition of information flow semantic, information flow properties and the prove-refine loop are all well founded and comprehensible, i.e. follow intuition.
+We find that the definition of information flow semantic, information flow properties and the prove-refine loop are all well-founded and comprehensible, i.e. follow intuition.
 On the other hand, we must admit that it is unknown whether there are blind spots to the verification procedure or more precisely: to the information flow properties.
 
-We argue that our results are indeed trustworthy as we managed to show that our properties are not meaningless since they are able to detect both the SYSRET and the cache poisoning vulnerability and well founded in intuition.
+We argue that our results are indeed trustworthy as we managed to show that our properties are not meaningless since they are able to detect both the SYSRET and the cache poisoning vulnerability and well-founded in intuition.
 But it is unclear
 \begin{enumerate*}[label=\alph*)]
     \item which class of bugs or vulnerabilities can be detected by this procedure and
@@ -306,7 +306,7 @@ We mark this problem as future work.
 One might ask, why it was decided to simulate all flows of information through the model of the MINRV8 architecture and indeed: In scope of this thesis, the actual content of registers is not mandatory, i.e. the actual contents of registers could be removed from the model such that only information flow tracking labels are tracked.
 Register values do play a role when memory is indexed, but this could likely be abstracted by non-deterministically choosing a memory location to be targeted by loads and stores.
 
-There are two reasons for why this decision was made.
+There are two reasons why this decision was made.
 Firstly, since the work of \citeauthor{Ferraiuolo17} \cite{Ferraiuolo17} was adopted where the authors did rely on precise values to track\footnote{%
     This is due to the fact that \gls{hdl} code is annotated.
     Or in other words: the authors did not have a chance to not track precise values.
@@ -324,11 +324,11 @@ With these two reasons at hand and the overall goal of this thesis to implement 
 \section{Per-Bit Information Flow Tracking}
 \label{sec:per-bit-tracking}
 
-Another issue is that in chapter \ref{chp:results} it was mentioned that counter-examples never involved flows of information where the bit-wise labels of values in the architecture was critical.
+Another issue is that in chapter \ref{chp:results}, it was mentioned that counter-examples never involved flows of information where the bit-wise labels of values in the architecture was critical.
 In other words: for this thesis, tracking only one bit for confidentiality and one bit for integrity for each register and memory address would suffice.
 Initially, it was decided to track labels bit-wise because \begin{enumerate*}[label=\alph*)]
     \item we followed the approach of \citeauthor{Ferraiuolo17} \cite{Ferraiuolo17} which tracked information flow bit-wise as well,
-    \item again, performance was sufficient to allow for it, and
+    \item again, the performance was sufficient to allow for it, and
     \item one could not have been sure prima facie non-bit-wise tracking of information would suffice.
 \end{enumerate*}
 
@@ -337,7 +337,7 @@ These results suggest that in future work, if the model ever was to be expanded 
 This would decrease the size of the state space to be considered by nuXmv exponentially.
 Additionally, one could remove instructions that only alter data but do not add new ways for information to flow.
 E.g., the \minrv{Add} instruction - from a pure standpoint of \textit{where} information flows - adds nothing in comparison to the \minrv{Mov} instruction.
-This option only shrinks the state space by a linear factor - nevertheless this might matter.
+This option only shrinks the state space by a linear factor - nevertheless, this might matter.
 
 The gist of these findings is:
 Whereas in the work of \citeauthor{Ferraiuolo17} \cite{Ferraiuolo17} tracking of each and every bit for a given system was crucial because the authors \textit{could not choose where bugs occur}, it seems that in our more-high-level approach, for every type of bug, there is a very simple trace illustrating it.
@@ -349,27 +349,27 @@ nuXmv is able to choose where a bug occurs since it quantifies over programs as 
 In the introduction, three goals were set for this thesis: it was claimed that the approach presented as part of this thesis is \textit{viable}, i.e. feasible, realistic and generalizable, \textit{effective}, i.e. it is able to detect issues, and \textit{supplemental}, i.e. it enhances on related work.
 
 All proofs were run on a laptop equipped with an Intel Core i7-7500U CPU and 8GB of RAM.
-It is safe to say, that these are very moderate hardware requirements.
+It is safe to say that these are very moderate hardware requirements.
 Proofs were conducted per property.
 None of these proofs took more than 60s.
 While we can give no clear count of working hours spent on this thesis, all of it was developed and written by a single person in no more than nine months.
 During this time, this person did not solely work on this thesis.
-In a non-research scenario one can assume that development would be more straight forward since it would not include the definition of an architecture.
+In a non-research scenario, one can assume that development would be more straight forward since it would not include the definition of an architecture.
 
 Due to the exponential blow-up of binary encoded state spaces, there are no guarantees that this approach scales well to realistic and complete architectures.
 However, there are two reasons which make seem likely that this approach does indeed scale.
-Firstly, the proofs here were ran on a small machine and did not take much time.
-Secondly, in sections \ref{sec:per-bit-tracking} it was discussed that bit-wise tracking of information flow might be dropped, i.e. there is room for performance improvements.
+Firstly, the proofs here ran on a small machine and did not take much time.
+Secondly, in sections \ref{sec:per-bit-tracking}, it was discussed that bit-wise tracking of information flow might be dropped, i.e. there is room for performance improvements.
 All of this gives good reasons to believe that our approach is indeed \textit{viable} and could be applied to other architectures with reasonable effort.
 
-To discuss the \textit{relevance} of this work, recall that in section \ref{sec:assumptions} it was shown that the implementation of the MINRV8 architecture models the property \enquote{assumptions $ \Leftrightarrow $ properties}.
+To discuss the \textit{relevance} of this work, recall that in section \ref{sec:assumptions}, it was shown that the implementation of the MINRV8 architecture models the property \enquote{assumptions $ \Leftrightarrow $ properties}.
 This was put to the test by exposing the implementation to the cache poisoning or SYSRET vulnerability where it was found that it then does violate the properties as presented in section \ref{sec:ifc-properties}.
 In other words, it was shown that the three properties \smv{MEMORY_OP_INTEGRITY}, \smv{CSR_INTEGRITY} and \smv{NO_LEAK} cover at least vulnerabilities related to the cache poisoning or SYSRET vulnerability without any manual intervention besides changing the architecture itself.
-This marks the main result of this thesis and shows that our approach to verifying \glspl{isa} is \textit{effecitve}.
+This marks the main result of this thesis and shows that our approach to verifying \glspl{isa} is \textit{effective}.
 Furthermore, mitigations to these vulnerabilities can be verified using the same model.
 It must be decided on a case by case basis whether a given violation of the information flow properties marks a vulnerability of the architecture leaving it with the need to be altered or marks a feature the risks of which must be controlled in software.
 
-The discussion whether our work also is \textit{supplemental} will be postponed to a later stage.
+The discussion of whether our work also is \textit{supplemental} will be postponed to a later stage.
 In the following chapter \ref{chp:related-work}, related work will be presented.
 This discussion will be picked up, following up on this.
 
@@ -390,8 +390,8 @@ These objectives are met by our work:
 \begin{itemize}
     \item The assumptions give rules for programmers of \glspl{os} and compilers that guarantee programs adhering to these do not violate basic information flow properties.
     \item Both assumptions and properties are small in number and short and can be expressed in intuitive natural language, hence are concise.
-    \item The properties itself are completely architecture independent and as such stable.
-    The assumptions are architecture dependent and rely on both instructions available and concrete semantics of these instructions.
+    \item The properties itself are completely architecture-independent and, as such, stable.
+    The assumptions are architecture-dependent and rely on both instructions available and concrete semantics of these instructions.
     However, we feel subjectively that only basic mechanics are used and predict that the assumptions in a practical environment of an architecture should be relatively stable as well.
     \item The premise of information flow tracking on instruction level is to describe the architecture from a different point of view.
     It is therefore obvious that there is very little risk of common-mode failure.
